--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div> slide 1</div>
+        <div> slide 2</div>
+        <div> slide 3</div>
+    </header>
     <h1>hi git</h1>
 </body>
 </html>
