--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
         <div> slide 3</div>
     </header>
     <h1>hi git</h1>
+    <footer>
+        <p>helo gitttttt</p>        <p>helo gitttttt</p>
+
+    </footer>
 </body>
 </html>
