--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         <div> slide 3</div>
     </header>
     <h1>hi git</h1>
+    <footer>
+        <h1>sehr</h1>
+    </footer>
 </body>
 </html>
